<resources>
    <string name="lbl_search">Search</string>
    <string name="app_name">VirCle</string>
    <string name="loading">Loading?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id" />
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token" />
    <string name="lbl_continue">CONTINUE</string>
    <string name="lbl_isi_data_diri2">Isi data diri</string>
    <string name="msg_tulis_biodata_d">Tulis biodata di sini...</string>
    <string name="lbl_fandy">Fandy</string>
    <string name="lbl_eka">Eka</string>
    <string name="lbl_lupa_pasword">Lupa Pasword?</string>
    <string name="msg_kangen_banget_y">kangen banget ya nonton Conan di indosiar. sekarang udah gampang banget, bisa nonton dubbed Jepang lagi, mayan nih buat tontonan di weekend. Rekomendasi gw sih di VIU!</string>
    <string name="lbl_xyru">XYRU</string>
    <string name="lbl_live">Live</string>
    <string name="lbl_ryu2">Ryu</string>
    <string name="lbl_masuk">LOGIN</string>
    <string name="lbl_gxyru">GXYRU</string>
    <string name="lbl_421">421</string>
    <string name="lbl_start_live">Start LIVE</string>
    <string name="lbl_leo_host">Leo-Host</string>
    <string name="lbl_join_live">JOIN LIVE</string>
    <string name="msg_buat_thread_or">Buat (Thread or Meeting Online)</string>
    <string name="lbl_komunitas">Komunitas</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_member">Member</string>
    <string name="lbl_isi_data_diri">Isi Data Diri</string>
    <string name="msg_tidak_ada_threa">Tidak ada Thread</string>
    <string name="msg_gxyru_13_juni">GXYRU . 13 Juni 2022</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_rp_35_000">Rp.35.000</string>
    <string name="lbl_53">53</string>
    <string name="lbl_versi_aplikasi">Versi Aplikasi</string>
    <string name="lbl_1_000_0">1.000.0</string>
    <string name="lbl_2_bulan">2
Bulan</string>
    <string name="lbl_write_a_message">Write a message</string>
    <string name="lbl_wendy">Wendy</string>
    <string name="lbl_pencarian">Pencarian</string>
    <string name="msg_belum_dapat_kod">Belum dapat kode verifikasi?</string>
    <string name="msg_kebijakan_priva">Kebijakan Privasi</string>
    <string name="lbl_one_piece">One Piece</string>
    <string name="msg_alasan_buat_kom">Alasan Buat Komunitas</string>
    <string name="lbl_249_komentar">249 Komentar</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_fullname">Fullname</string>
    <string name="lbl_nohandphone">No Handphone</string>
    <string name="lbl_namakomunitas">Nama Komunitas</string>
    <string name="lbl_5_bulan">5
Bulan</string>
    <string name="lbl_moderator">Moderator</string>
    <string name="msg_anjir_ini_sih_k">Anjir ini sih kartun favorit saya waktu sekolah hahaha tapi jujur penasaran si conan bisa balik gede gak sih, setiap liat dia masih kecil aja haha</string>
    <string name="msg_screen_komunita">Screen Komunitas</string>
    <string name="msg_masukkan_kode_v">Masukkan kode verifikasi yang telah dikirim melalui email ke email@email.com</string>
    <string name="msg_echiro_oda_konf">Echiro Oda Konfirmasi mengenai arc terakhir di One Piece</string>
    <string name="lbl_nama_komunitas">Nama Komunitas</string>
    <string name="lbl_diskripsi">Diskripsi</string>
    <string name="lbl_buat_komunitas">Buat Komunitas</string>
    <string name="lbl_atau">Atau</string>
    <string name="lbl_40">40</string>
    <string name="lbl_host">Host</string>
    <string name="msg_ketentuan_pengg2">Ketentuan Pengguna</string>
    <string name="lbl_notifikasi">Notifikasi</string>
    <string name="lbl_krim_ulang">Krim Ulang</string>
    <string name="lbl_komentar">Komentar</string>
    <string name="lbl_123">123</string>
    <string name="msg_tampilkan_balas">Tampilkan Balasan</string>
    <string name="msg_tulis_nomor_hp">Tulis nomor hp di sini...</string>
    <string name="lbl_surya">Surya</string>
    <string name="lbl_13_juni_2022">13 Juni 2022</string>
    <string name="lbl_friends_7">Friends (7)</string>
    <string name="lbl_friends">Friends</string>
    <string name="lbl_1_komentar">1 Komentar</string>
    <string name="msg_forum_komunitas">Forum Komunitas penggemar dan pecinta Anime. Berbincang dan berdiskusi hal terbaru yang berunsur jepang</string>
    <string name="lbl_start_meeting">Start Meeting</string>
    <string name="lbl_120">120</string>
    <string name="msg_sudah_punya_aku">Sudah punya akun? </string>
    <string name="msg_nomor_hp_tidak">Nomor Hp tidak akan ditampilkan</string>
    <string name="msg_popular_di_weeb">Popular di WEEBZ INDO</string>
    <string name="lbl_contoh_thread">Contoh Thread</string>
    <string name="lbl_vircle2">VirCLe</string>
    <string name="msg_register_dengan2">Register dengan Facebook</string>
    <string name="msg_verifikasi_emai">Verifikasi Email</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="msg_belum_punya_aku">Belum punya akun? </string>
    <string name="lbl_password">Password</string>
    <string name="msg_ketentuan_pengg"> Ketentuan Penggunaan</string>
    <string name="lbl_billy">Billy</string>
    <string name="lbl_splashscreen">SplashScreen</string>
    <string name="msg_dengan_melanjut">Dengan melanjutkan, anda menyetujui Ketentuan Penggunaan dan Kebijakan Privasi VirCle</string>
    <string name="msg_tempat_nonton_d">Tempat nonton Detective Conan secara legal dimana gais?</string>
    <string name="lbl_115">115</string>
    <string name="lbl_leo">Leo</string>
    <string name="msg_buat_meeting_on">Buat Meeting Online</string>
    <string name="lbl_pengaturan">Pengaturan</string>
    <string name="lbl_buat">Buat</string>
    <string name="msg_ayo_buat_thread">Ayo buat thread pertama mu</string>
    <string name="msg_register_dengan">Register dengan Google</string>
    <string name="lbl_ryu">RYU</string>
    <string name="lbl_bantuan">Bantuan</string>
    <string name="lbl_20">20</string>
    <string name="msg_tulis_tema_disi">Tulis Tema disini...</string>
    <string name="lbl_biodata">Biodata</string>
    <string name="lbl_keluar">Keluar</string>
    <string name="lbl_23">23</string>
    <string name="msg_android_large">Android Large - One Six</string>
    <string name="msg_masuk_dengan_go">Sign in with Google</string>
    <string name="msg_arti_hito_hito">Arti Hito Hito No Mi dalam Serial One Piece</string>
    <string name="lbl_live2">LIVE</string>
    <string name="msg_verifikasi_emai2">Verifikasi email</string>
    <string name="msg_tulis_judul_di">Tulis Judul Di sini...</string>
    <string name="lbl_buat_thread">Buat Thread</string>
    <string name="lbl_chat">Chat</string>
    <string name="msg_bergabunglah_me">Bergabunglah menjadi Member VirCle,
Murah dan akan mendapatkan banyak keuntungan seperti contohnya fitur tambahan dan lainnya.</string>
    <string name="msg_membuat_thread">Membuat thread, berkomentar, berdiskusi online, serta bergabung dengan komunitas</string>
    <string name="lbl_1_bulan">1
Bulan</string>
    <string name="msg_cukaso_11_jun">cukaso . 11 Juni 2022</string>
    <string name="msg_belum_punya_aku2">Belum punya akun? daftar</string>
    <string name="lbl_weebz_indo">WEEBZ INDO</string>
    <string name="lbl_nomor_handphone">Nomor Handphone</string>
    <string name="lbl_10">10</string>
    <string name="msg_contoh_komunita">Contoh Komunitas</string>
    <string name="lbl_vircle">VirCle</string>
    <string name="lbl_buat_komuntas">Buat Komuntas</string>
    <string name="lbl_screen_member">Screen Member</string>
    <string name="lbl_daftar_vircle">Daftar VirCle</string>
    <string name="lbl_register">Register</string>
    <string name="msg_berikan_komenta">Berikan Komentar</string>
    <string name="msg_pilih_thread_di">Pilih thread disini</string>
    <string name="lbl_send_message">Send Message</string>
    <string name="lbl_join_live2">Join Live</string>
    <string name="msg_tulis_konten_di">Tulis Konten disini...</string>
    <string name="msg_masuk_dengan_fa">Sign in with Facebook</string>
    <string name="lbl_buat_live">Buat LIve</string>
    <string name="lbl_screen_live">Screen Live</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_156_komentar">156 Komentar</string>
    <string name="msg_dengan_melanjut2">Dengan melanjutkan, anda menyetujui</string>
    <string name="lbl_nomor_hp">Nomor Hp</string>
    <string name="msg_421_thread_12">421 Thread . 123 Member</string>
    <string name="lbl_0">0</string>
    <string name="lbl_1">1</string>
    <string name="lbl_rafli">Rafli</string>
    <string name="lbl_thread">Thread</string>
    <string name="lbl_profil">Profil</string>
    <string name="lbl_balas">Balas</string>
    <string name="msg_live_bareng_yuk">LIVE bareng yuk, bahas  arc terakhir di One PIece</string>
    <string name="lbl_screen_profile">Screen Profile</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_rp_50_000">Rp.50.000</string>
    <string name="msg_diisi_dengan_no">Diisi dengan nomor handphone yang aktif dan terhubung WA, agar tim VirCle dapat menginfokan persetujuan atas pendaftaran komunitasmu</string>
    <string name="lbl_member2">MEMBER</string>
    <string name="lbl_popular">Popular</string>
    <string name="msg_billy_12_juni">Billy . 12 Juni 2022</string>
    <string name="msg_apakah_joyboy_a">Apakah joyboy adalah luffy?</string>
    <string name="lbl_daftar2">Daftar</string>
    <string name="msg_screen_komunita2">Screen Komunitas Popular</string>
    <string name="lbl_revivo">Revivo</string>
    <string name="msg_android_large2">Android Large - One Eight</string>
    <string name="lbl_tentang_kami">Tentang Kami</string>
    <string name="msg_android_large4">Android Large - One Three</string>
    <string name="msg_android_large3">Android Large - One Seven</string>
    <string name="msg_android_large6">Android Large - One Five</string>
    <string name="msg_android_large5">Android Large - One One</string>
    <string name="msg_android_large8">Android Large - One</string>
    <string name="lbl_imin">Imin</string>
    <string name="msg_android_large7">Android Large - One Four</string>
    <string name="lbl_daftar">daftar</string>
    <string name="lbl_follow">Follow</string>
    <string name="tmbl_buat">buat</string>
    <string name="msg_android_large9">Android Large - One Two</string>
    <string name="lbl_dan"> dan </string>
    <string name="lbl_terbaru">Terbaru</string>
    <string name="lbl_2_komentar">2 Komentar</string>
    <string name="lbl_312_komentar">312 Komentar</string>
    <string name="lbl_12_juni_2022">12 Juni 2022</string>
    <string name="msg_screen_perteman">Screen Pertemanan</string>
    <string name="lbl_komunitas_saya">Komunitas Saya</string>
    <string name="lbl_deskripsi">Deskripsi</string>
    <string name="lbl_alasan">Alasan buat Komunitas</string>
    <string name="lbl_rp_155_000">Rp.155.000</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="msg_konfirmasi_pass">Konfirmasi Password</string>
    <string name="lbl_Username">Username</string>
    <string name="lbl_konfirmasipassword">Konfirmasi Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>