<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearBuatKomuntas"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginBottom="@dimen/_678pxv"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_11pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnbuatkomunitas"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_weight="0.96" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtBuatKomunitas"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_56pxh"
                android:layout_marginStart="@dimen/_56pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_buat_komunitas"
                style="@style/txtInterregular24" tools:text="@string/lbl_buat_komunitas"/>

            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_email"
                style="@style/txtInterregular20" tools:text="@string/lbl_email"/>

            <EditText
                android:id="@+id/etGroupTwo"
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_6"
                android:drawableStart="@drawable/img_vector"
                android:drawablePadding="@dimen/_21pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_9pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_700"
                tools:ignore="Autofill" />
            <TextView android:ellipsize="end"
                android:id="@+id/txtUsername"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_username"
                style="@style/txtInterregular20" tools:text="@string/lbl_username"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnUsernameOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_username"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_username"/>
            <FrameLayout android:id="@+id/frameStackdescription"
                android:layout_height="@dimen/_95pxv"
                android:layout_marginTop="@dimen/_23pxv" android:layout_width="@dimen/_290pxh">
                <FrameLayout android:id="@+id/frameStacknomorhandphone"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_20pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh" android:layout_width="@dimen/_179pxh">
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtNomorHandphone"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/lbl_nomor_handphone"
                        style="@style/txtInterregular20" tools:text="@string/lbl_nomor_handphone"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtNomorHandphoneOne"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/lbl_nomor_handphone"
                        style="@style/txtInterregular20" tools:text="@string/lbl_nomor_handphone"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtDescription"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/msg_diisi_dengan_no"
                    style="@style/txtInterregular16" tools:text="@string/msg_diisi_dengan_no"/>
            </FrameLayout>
            <View
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_6"
                android:id="@+id/viewRectangleThree"
                android:layout_height="@dimen/_36pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_278pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNamaKomunitas"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_nama_komunitas"
                style="@style/txtInterregular20" tools:text="@string/lbl_nama_komunitas"/>

            <EditText
                android:id="@+id/etRectangleFour"
                style="@style/etSolidRoundedOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_6"
                android:ellipsize="end"
                android:inputType="text"
                android:minHeight="48dp"
                android:singleLine="true"
                tools:ignore="Autofill,SpeakableTextPresentCheck" />
            <TextView android:ellipsize="end"
                android:id="@+id/txtDeskripsi"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_deskripsi"
                style="@style/txtInterregular20" tools:text="@string/lbl_deskripsi"/>

            <EditText
                android:id="@+id/etRectangleFive"
                style="@style/etSolidRoundedOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_6"
                android:ellipsize="end"
                android:inputType="text"
                android:minHeight="48dp"
                android:singleLine="true"
                tools:ignore="Autofill,SpeakableTextPresentCheck" />
            <TextView android:ellipsize="end"
                android:id="@+id/txtAlasanBuatKom"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_alasan_buat_kom"
                style="@style/txtInterregular20" tools:text="@string/msg_alasan_buat_kom"/>

            <EditText
                android:id="@+id/etRectangleSix"
                style="@style/etSolidRoundedOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_6"
                android:ellipsize="end"
                android:inputType="text"
                android:minHeight="48dp"
                android:singleLine="true"
                tools:ignore="Autofill,SpeakableTextPresentCheck" />
            <TextView android:ellipsize="end" android:id="@+id/txtBuat"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_113pxh"
                android:layout_marginStart="@dimen/_113pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_buat"
                style="@style/txtInterregular24" tools:text="@string/lbl_buat"/>
        </LinearLayout>
    </LinearLayout>
</layout>
